# desktop-Traffer-

./: debug.py  desktop-Traffer.rar  gui.rar  log_config.py  main.py  paths.py  pyproject.toml  requirements.txt  src.rar  Запуск.bat  Запуск.ps1  прокси.txt
core/: account.py  utils.py
gui/: account_manager.py  hover_anim.py  inviter_manager.py  inviter_manager_old.py  inviter_manager_optimized.py  log_console.py  main_window.py  main_window_old.py  main_window_optimized.py
gui/component_account_manager/: __init__.py  account_stats.py  account_table.py  loading_animation.py  sales_accounts.py  traffic_accounts.py
gui/component_inviter/: __init__.py  inviter_stats.py  inviter_table.py  inviter_table_old.py  inviter_table_optimized.py
gui/dialogs/: __init__.py  archive_accounts_dialog.py  bot_holders_dialog.py  bot_token_dialog.py  custom_confirm_dialog.py  inviter_dialogs.py  main_admins_dialog.py  move_accounts_dialog.py  report_progress_dialog.py
gui/handlers/: __init__.py  table_handlers.py
gui/notifications/: __init__.py  notification_manager.py  notification_widget.py
gui/style/: console.qss  light.qss
gui/workers/: __init__.py  background_workers.py
src/accounts/: __init__.py  manager.py
src/entities/: __init__.py  account.py  proxy.py
src/modules/: __init__.py  manager.py
src/proxies/: __init__.py  manager.py
src/services/: account_report_service.py
src/utils/: __init__.py  folder_utils.py
Архивы/: accounts_sales_20250718_111024.rar
Архивы/accounts_sales_20250717_173736/: +12393929477.json  +12393929477.session
(+606 files in other folders)
